name:              resolution
version:           0.0.0
license:           BSD3
author:            Raphael Javaux
maintainer:        Raphael Javaux
synopsis:          Implémentation de la méthode de résolution pour le cours de logique
category:          Compiler
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple

executable         resolution

    main-is:           Resolution.hs
    build-depends:     base
                     , parsec                        >= 3.1.3   && < 4
                     , text                          >= 0.11    && < 1

    ghc-options:       -O2 -rtsopts -Wall
